chore: JSON RPC Agent RestHandler 패턴 A2A BP와 유사하게 변경